--- a/university.html
+++ b/university.html
@@ -7,7 +7,7 @@
     <title>generate the all the university of the any country</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <h3>University Name Generator</h3>
     <input placeholder="Enter The Any Country Name">
     <button id="b">Search</button>
