--- a/university.html
+++ b/university.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="university.css">
-    <title>generate the all the university of the any country</title>
+    <title>University Name Generator</title>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <h3>University Name Generator</h3>
-    <input placeholder="Enter The Any Country Name">
+    <input id="country" placeholder="Enter any country name">
     <button id="b">Search</button>
-   <ul id="list"></ul>
+    <ul id="list"></ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="university.js"></script>
 
 </body>
